feat(web,backend): reloj en vivo, botón de volver al menú, notación con capturas